<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name_display" translatable="false">TierYourLife</string>
    <string name="cd_clear_query">Clear search</string>
    <string name="cd_close_search">Close search</string>
    <string name="home_search_hint">Search your lists</string>
    <string name="tier_lists_content_description_as_pictures">Show boards as pictures</string>
    <string name="tier_lists_content_description_as_rows">Show boards as rows</string>
    <string name="tier_lists_content_description_search">Search your lists</string>
    <string name="tier_lists_content_description_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
...
